ASM-1862 Refactor test classes to remove access modifiers and improve readability